# league-notifier

./: Cargo.toml
.github/workflows/: release.yml
src/: client.rs  main.rs  types.rs
