[package]
name = "league-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
image = "0.25.1"
irelia = { version = "0.6.10", features = ["ws"] }
notify-rust = "4.11.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tray-icon = "0.13.5"
winit = "0.30.0"
